# octobors

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  action.dockerfile  action.yml  build_and_push.sh  deny.toml
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
config/: example.toml  test.toml
scripts/: local-run.nu
src/: context.rs  lib.rs  main.rs  merge.rs  process.rs  review.rs
src/process/: tests.rs
