[package]
name = "octobors"
version = "1.7.1"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
# Error helpers
anyhow = "1.0"
# logging and tracing macros
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Used for making all of the requests to github
octocrab = { version = "0.38", default-features = false, features = ["default-client", "rustls"] }
http = "*"
# De/serialization support
serde = { version = "1.0", features = ["derive"] }
# TOML support
toml = "0.8"
# Async runtime
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
# Date and time data structures
chrono = "0.4"
# Futures combinators
futures = "0.3"

[patch.crates-io]
# Patch to add a rustls feature. Also includes the latest from octocrab, which
# includes a bump of reqwest which allows us to use tokio 1.0
#octocrab = { git = "https://github.com/EmbarkStudios/octocrab", rev = "e662d8e" }
#octocrab = { path = "../octocrab" }
